# eszett

./: .npmrc.template
app/: .npmrc  package.json  pnpm-lock.yaml  tsconfig.json
app/src/lib/: counter.svelte.ts
app/src/routes/: +page.svelte
app/src/routes/words/: +page.svelte
lib/: Cargo.toml
lib/base/: Cargo.toml  README.md
lib/base/src/: language.rs  lib.rs  part_of_speech.rs  script.rs  user.rs
lib/client/: Cargo.toml
lib/client/src/: lib.rs  query.rs
lib/dao/: .env  .npmrc  Cargo.toml  README.md  data.excalidraw  package.json
lib/dao/.sqlx/: query-6b19511aace1df051c8d4dd226e5e170324234a1ab0c78f830022d09d8cbb83d.json  query-7a8a0458d8e08e9d6f5500a225b4c12040d7c5324efcf0331641c6dfa22d39f3.json  query-ac7849f2c3874572bff097d2218f9f95b68c54cb629319d1a3c6c735d150b456.json  query-ec7d48a42512ae332e1a6dfc04c70ea7846f2494b8cf3d97e4a36add5b5d3a99.json  query-ef19eca96569141381dfc3ee6d7fc36b1b6fae6e1ddb4bf172d2b922f39f8e8a.json  query-f44c1b4d791b7ca9623baefd28af36c71222d016a423942e0cf25ba4390fd046.json
lib/dao/migrations/: 20251208171632_terms.sql
lib/dao/queries/term/: find.sql  insert.sql
lib/dao/src/: connection.rs  connector.rs  id.rs  lib.rs  term.rs
lib/dao/src/language/: dao.rs  id.rs  mod.rs  model.rs
lib/dao/src/lemma/: model.rs  query.rs
lib/dao/src/lexeme/: model.rs
lib/dao/src/part_of_speech/: model.rs
lib/dao/src/term/: mod.rs  model.rs  query.rs  term.rs  term_id.rs
lib/dto/: .npmrc  Cargo.toml
lib/dto/src/: lib.rs
lib/dto/src/language/: error.rs  mod.rs
lib/dto/src/part_of_speech/: error.rs  mod.rs
lib/reference/: Cargo.toml
lib/reference/data/en/: a.yaml  b.yaml  c.yaml
lib/reference/data/es/: a.yaml
lib/reference/data/fr/: a.yaml
lib/reference/data/it/: a.yaml
lib/reference/src/: format_files.rs  format_lexemes.rs  get_directory.rs  lexeme_map.rs  lexeme_meta.rs  lib.rs  main.rs  part_of_speech.rs  read_files.rs  read_lexemes.rs  write_files.rs  write_lexemes.rs
lib/server/: Cargo.toml  cargo  collection.yaml  document.yaml  openapi.yaml
lib/server/src/: main.rs
lib/server/src/language/: extension.rs  extractor.rs  mod.rs
lib/server/src/lemma/: extension.rs
lib/server/src/reference/: mod.rs
lib/server/src/term/: extension.rs  extractor.rs  mod.rs  route.rs
lib/shared/: Cargo.toml  README.md
lib/shared/src/: lib.rs  main.rs
lib/src/: main.rs
