[workspace]
resolver = "3"
members = [
   "base",
   "dao",
   "client",
   "server",
   "shared",
]

[workspace.dependencies]
eszett-base = { path = "./base" }
indoc = "2.0.7"
js-sys = "0.3.83"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.48.0", features = ["full"] }
tsify = "0.5.6"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
anyhow = "1.0"
dotenvy = "0.15.0"