[workspace]
resolver = "3"
members = [
   "base",
   "dao",
   "client",
   "reference",
   "server",
   "shared",
]

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
base = { path = "./base" }
dao = { path = "./dao" }
futures = "0.3.31"
icu = "2.1.1"
indoc = "2.0.7"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.9.0-alpha.1", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
reference = { path = "./reference" }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
tsify = "0.5.6"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
dotenvy = "0.15.7"
glob = "0.3.3"
project-root = "0.2.2"
