[package]
name = "eszett-client"
version = "0.1.0"
edition = "2024"
description = "Client for querying Eszett Lib"
repository = "https://github.com/hgiesel/eszett"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eszett-base = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }