[package]
name = "eszett-dao"
edition = "2024"
description = "Data access layer for Eszett Lib Server"
repository = "https://github.com/hgiesel/eszett/tree/main/lib/dao"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
eszett-base = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }