[package]
name = "dao"
edition = "2024"
description = "Data access layer for Eszett Lib Server"
repository = "https://github.com/hgiesel/eszett/tree/main/lib/dao"
license = "MIT"
publish = false

[profile.dev.package.sqlx-macros]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1.89"
