[package]
name = "dto"
version = "0.1.0"
edition = "2024"
description = "Client for querying Eszett Lib"
repository = "https://github.com/hgiesel/eszett"
license = "MIT"
publish = false

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
serde = "1.0.228"
serde_json = { workspace = true }
