[package]
name = "reference"
version = "0.1.0"
edition = "2024"
description = "Backend for eszett"
repository = "https://github.com/hgiesel/eszett"
license = "MIT"
publish = false

[dependencies]
glob = { workspace = true }
serde_yaml = { workspace = true }
project-root = { workspace = true }
anyhow = { workspace = true }