[package]
name = "reference"
version = "0.1.0"
edition = "2024"
description = "Backend for eszett"
repository = "https://github.com/hgiesel/eszett"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
base = { workspace = true }
dto = { workspace = true }
glob = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
project-root = { workspace = true }
icu = { workspace = true }
unicode-segmentation = "1.12.0"
