[package]
name = "eszett-server"
version = "0.1.0"
edition = "2024"
description = "Server for eszett"
repository = "https://github.com/hgiesel/eszett/lib/server"
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = "0.3.22"
