[package]
name = "eszett-server"
version = "0.1.0"
edition = "2024"
description = "Server for eszett"
repository = "https://github.com/hgiesel/eszett/lib/server"
license = "MIT"
publish = false

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
dao = { workspace = true }
