[package]
name = "server"
version = "0.1.0"
edition = "2024"
description = "Server for eszett"
repository = "https://github.com/hgiesel/eszett/lib/server"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base = { workspace = true }
dao = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
reference = { workspace = true }
project-root = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
